--- a/BloodDonor/view/controller/HSEventPlanningViewController.xib
+++ b/BloodDonor/view/controller/HSEventPlanningViewController.xib
@@ -39,47 +39,6 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIButton" id="760181495">
-						<reference key="NSNextResponder" ref="471229315"/>
-						<int key="NSvFlags">271</int>
-						<string key="NSFrame">{{7, 421}, {306, 39}}</string>
-						<reference key="NSSuperview" ref="471229315"/>
-						<reference key="NSWindow"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIOpaque">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="189919169">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MQA</bytes>
-						</object>
-						<object class="NSColor" key="IBUINormalTitleColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-						</object>
-						<object class="NSColor" key="IBUINormalTitleShadowColor" id="915672517">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MC41AA</bytes>
-						</object>
-						<object class="NSCustomResource" key="IBUIHighlightedImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">eventRemoveButtonPressed.png</string>
-						</object>
-						<object class="NSCustomResource" key="IBUINormalImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">eventRemoveButtonNormal.png</string>
-						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="824833273">
-							<int key="type">2</int>
-							<double key="pointSize">15</double>
-						</object>
-						<object class="NSFont" key="IBUIFont" id="584399066">
-							<string key="NSName">Helvetica-Bold</string>
-							<double key="NSSize">15</double>
-							<int key="NSfFlags">16</int>
-						</object>
-					</object>
 					<object class="IBUIButton" id="169441071">
 						<reference key="NSNextResponder" ref="471229315"/>
 						<int key="NSvFlags">292</int>
@@ -92,18 +51,31 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<reference key="IBUIHighlightedTitleColor" ref="189919169"/>
+						<object class="NSColor" key="IBUIHighlightedTitleColor" id="189919169">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MQA</bytes>
+						</object>
 						<object class="NSColor" key="IBUINormalTitleColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC43OTYwNzg0MzE0IDAuNjk4MDM5MjE1NyAwLjYzOTIxNTY4NjMAA</bytes>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="915672517"/>
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="915672517">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MC41AA</bytes>
+						</object>
 						<object class="NSCustomResource" key="IBUINormalBackgroundImage" id="207932451">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">cell.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="824833273"/>
-						<reference key="IBUIFont" ref="584399066"/>
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="824833273">
+							<int key="type">2</int>
+							<double key="pointSize">15</double>
+						</object>
+						<object class="NSFont" key="IBUIFont" id="152259055">
+							<string key="NSName">Helvetica-Bold</string>
+							<double key="NSSize">15</double>
+							<int key="NSfFlags">16</int>
+						</object>
 					</object>
 					<object class="IBUILabel" id="958282197">
 						<reference key="NSNextResponder" ref="471229315"/>
@@ -127,7 +99,7 @@
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<reference key="IBUIFontDescription" ref="824833273"/>
-						<reference key="IBUIFont" ref="584399066"/>
+						<reference key="IBUIFont" ref="152259055"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUIImageView" id="707409821">
@@ -166,7 +138,7 @@
 						<string key="NSFrame">{{7, 294}, {306, 119}}</string>
 						<reference key="NSSuperview" ref="471229315"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="760181495"/>
+						<reference key="NSNextKeyView" ref="100326777"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -217,7 +189,7 @@
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
 						<reference key="IBUIFontDescription" ref="824833273"/>
-						<reference key="IBUIFont" ref="584399066"/>
+						<reference key="IBUIFont" ref="152259055"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 					<object class="IBUIImageView" id="863478263">
@@ -226,6 +198,7 @@
 						<string key="NSFrame">{{209, 270}, {16, 16}}</string>
 						<reference key="NSSuperview" ref="471229315"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="34260992"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -258,7 +231,7 @@
 								<reference key="IBUINormalTitleShadowColor" ref="915672517"/>
 								<reference key="IBUINormalBackgroundImage" ref="207932451"/>
 								<reference key="IBUIFontDescription" ref="824833273"/>
-								<reference key="IBUIFont" ref="584399066"/>
+								<reference key="IBUIFont" ref="152259055"/>
 							</object>
 							<object class="IBUIButton" id="767617565">
 								<reference key="NSNextResponder" ref="1001598696"/>
@@ -280,7 +253,7 @@
 								<reference key="IBUINormalTitleShadowColor" ref="915672517"/>
 								<reference key="IBUINormalBackgroundImage" ref="207932451"/>
 								<reference key="IBUIFontDescription" ref="824833273"/>
-								<reference key="IBUIFont" ref="584399066"/>
+								<reference key="IBUIFont" ref="152259055"/>
 							</object>
 							<object class="IBUILabel" id="835327891">
 								<reference key="NSNextResponder" ref="1001598696"/>
@@ -304,7 +277,7 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<reference key="IBUIFontDescription" ref="824833273"/>
-								<reference key="IBUIFont" ref="584399066"/>
+								<reference key="IBUIFont" ref="152259055"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUIImageView" id="318228340">
@@ -377,7 +350,7 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<reference key="IBUIFontDescription" ref="824833273"/>
-								<reference key="IBUIFont" ref="584399066"/>
+								<reference key="IBUIFont" ref="152259055"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUILabel" id="767340655">
@@ -477,7 +450,7 @@
 								<reference key="IBUINormalTitleShadowColor" ref="915672517"/>
 								<reference key="IBUINormalBackgroundImage" ref="207932451"/>
 								<reference key="IBUIFontDescription" ref="824833273"/>
-								<reference key="IBUIFont" ref="584399066"/>
+								<reference key="IBUIFont" ref="152259055"/>
 							</object>
 							<object class="IBUILabel" id="172006684">
 								<reference key="NSNextResponder" ref="632472434"/>
@@ -501,7 +474,7 @@
 								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<reference key="IBUIFontDescription" ref="824833273"/>
-								<reference key="IBUIFont" ref="584399066"/>
+								<reference key="IBUIFont" ref="152259055"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUIImageView" id="675473899">
@@ -587,6 +560,27 @@
 						<reference key="IBUIFont" ref="695900805"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
+					<object class="IBUIButton" id="100326777">
+						<reference key="NSNextResponder" ref="471229315"/>
+						<int key="NSvFlags">298</int>
+						<string key="NSFrame">{{4, 421}, {307, 44}}</string>
+						<reference key="NSSuperview" ref="471229315"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<reference key="IBUIHighlightedTitleColor" ref="189919169"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="915672517"/>
+						<reference key="IBUIFontDescription" ref="824833273"/>
+						<reference key="IBUIFont" ref="152259055"/>
+					</object>
 				</array>
 				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
@@ -621,6 +615,7 @@
 						<string key="NSFrameSize">{320, 392}</string>
 						<reference key="NSSuperview" ref="957166677"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -748,13 +743,12 @@
 					<int key="connectionID">101</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">removeBloodEvent:</string>
-						<reference key="source" ref="760181495"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">removeRemoteEventButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="100326777"/>
 					</object>
-					<int key="connectionID">71</int>
+					<int key="connectionID">105</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -800,6 +794,15 @@
 					</object>
 					<int key="connectionID">102</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">removeBloodEvent:</string>
+						<reference key="source" ref="100326777"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">104</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -839,7 +842,6 @@
 						<int key="objectID">90</int>
 						<reference key="object" ref="471229315"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="760181495"/>
 							<reference ref="169441071"/>
 							<reference ref="958282197"/>
 							<reference ref="707409821"/>
@@ -850,6 +852,7 @@
 							<reference ref="632472434"/>
 							<reference ref="676119473"/>
 							<reference ref="34260992"/>
+							<reference ref="100326777"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -993,11 +996,6 @@
 						<reference key="parent" ref="471229315"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">36</int>
-						<reference key="object" ref="760181495"/>
-						<reference key="parent" ref="471229315"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">99</int>
 						<reference key="object" ref="556173137"/>
 						<reference key="parent" ref="957166677"/>
@@ -1005,6 +1003,11 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">100</int>
 						<reference key="object" ref="34260992"/>
+						<reference key="parent" ref="471229315"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">103</int>
+						<reference key="object" ref="100326777"/>
 						<reference key="parent" ref="471229315"/>
 					</object>
 				</array>
@@ -1015,6 +1018,7 @@
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="100.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="103.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1024,8 +1028,6 @@
 				<string key="29.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="33.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="34.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="36.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<real value="1" key="36.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="40.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="41.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="44.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -1050,7 +1052,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">102</int>
+			<int key="maxID">105</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1095,6 +1097,7 @@
 						<string key="commentsTextView">UITextView</string>
 						<string key="contentView">UIView</string>
 						<string key="dataAndPlaceView">UIView</string>
+						<string key="removeRemoteEventButton">UIButton</string>
 						<string key="rootScrollView">UIScrollView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -1130,6 +1133,10 @@
 							<string key="name">dataAndPlaceView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
+						<object class="IBToOneOutletInfo" key="removeRemoteEventButton">
+							<string key="name">removeRemoteEventButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
 						<object class="IBToOneOutletInfo" key="rootScrollView">
 							<string key="name">rootScrollView</string>
 							<string key="candidateClassName">UIScrollView</string>
@@ -1155,8 +1162,6 @@
 			<string key="dottedLine.png">{301, 3}</string>
 			<string key="eventCommentIcon.png">{16, 16}</string>
 			<string key="eventPlanningTestBackground.png">{320, 556}</string>
-			<string key="eventRemoveButtonNormal.png">{306, 39}</string>
-			<string key="eventRemoveButtonPressed.png">{306, 39}</string>
 			<string key="itemArrow.png">{9, 15}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1926</string>
