--- a/wp7-donor/Donor/ProfileLogin.xaml
+++ b/wp7-donor/Donor/ProfileLogin.xaml
@@ -364,6 +364,7 @@ Visibility="Collapsed" Name="SaveEditProfileButton" Click="SaveEditProfileButton
                             </StackPanel>
 
                             <Button 
+                                Margin="0,5,0,10"
 					            FontSize="24"
 					            Background="#FF4186A3" 
 					            BorderBrush="#FF4186A3" 
